[gd_scene load_steps=26 format=2]

[ext_resource path="res://Greenhouse/Plant.gd" type="Script" id=1]
[ext_resource path="res://Greenhouse/Field.shader" type="Shader" id=2]
[ext_resource path="res://assets/greenhouse/field.png" type="Texture" id=3]
[ext_resource path="res://assets/greenhouse/light.png" type="Texture" id=4]
[ext_resource path="res://assets/greenhouse/dry2.png" type="Texture" id=5]
[ext_resource path="res://assets/greenhouse/dry1.png" type="Texture" id=6]
[ext_resource path="res://assets/greenhouse/dry0.png" type="Texture" id=7]
[ext_resource path="res://assets/particles/star.png" type="Texture" id=8]
[ext_resource path="res://assets/particles/sleep.png" type="Texture" id=9]
[ext_resource path="res://Greenhouse/PlantBreak.shader" type="Shader" id=10]
[ext_resource path="res://assets/greenhouse/pixel.png" type="Texture" id=11]

[sub_resource type="OpenSimplexNoise" id=1]
octaves = 2
period = 4.0

[sub_resource type="NoiseTexture" id=2]
width = 4
height = 4
noise = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/noise = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 64 )

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

uniform sampler2D noise;

void fragment() {
	COLOR = vec4(0.345098, 0.65098, 0.364706, 0.235294);
	if (UV.y < 0.05 || UV.y > 0.95 || (FRAGCOORD.x < 200.0 && UV.x < 0.05) || (FRAGCOORD.x > 1150.0 && UV.x > 0.95)) {
		if (texture(noise, UV).r > 0.5) {
			COLOR.a = 0.0;
		}
	}
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )

[sub_resource type="AnimatedTexture" id=6]
frames = 3
fps = 2.0
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.3

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.54902, 0.309804, 0.666667, 1, 0.403922, 0.172549, 0.521569, 0.341176 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 40, 20, 1 )
flag_disable_z = true
gravity = Vector3( 0, -30, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 8 )
hue_variation = 0.01

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 30, 1, 1 )
flag_disable_z = true
gravity = Vector3( 10, -98, 0 )
initial_velocity = 86.29
initial_velocity_random = 1.0
angular_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = SubResource( 11 )

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 10 )
shader_param/bottom_y = 64.0

[node name="Plant" type="Node2D"]
script = ExtResource( 1 )

[node name="FieldSprite" type="Sprite" parent="."]
material = SubResource( 3 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="FieldPotionOverlay" type="Sprite" parent="."]
z_as_relative = false

[node name="PlantArea" type="Area2D" parent="." groups=[
"MouseAreas",
]]
input_pickable = false
monitoring = false
collision_layer = 8
collision_mask = 0

[node name="FieldArea" type="Area2D" parent="." groups=[
"MouseAreas",
]]
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldArea"]
visible = false
shape = SubResource( 4 )

[node name="PlantSprite" type="Sprite" parent="."]
position = Vector2( 0, -64 )
z_index = 2
z_as_relative = false
region_enabled = true
region_rect = Rect2( 0, 0, 128, 256 )

[node name="WeedsSprite" type="Sprite" parent="."]
z_index = 2
z_as_relative = false

[node name="GrowTimer" type="Timer" parent="."]
wait_time = 0.06

[node name="Overlay" type="ColorRect" parent="."]
visible = false
material = SubResource( 15 )
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0.345098, 0.65098, 0.364706, 0.235294 )

[node name="DryTimer" type="Timer" parent="."]

[node name="Light" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 4 )
texture_scale = 0.4

[node name="Hydration" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.52549, 0.52549, 0.52549, 1 )
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = SubResource( 6 )
stretch_mode = 4

[node name="StarParticles" type="Particles2D" parent="."]
z_index = 6
z_as_relative = false
emitting = false
amount = 12
lifetime = 3.0
randomness = 0.15
visibility_rect = Rect2( -100, -192, 200, 256 )
process_material = SubResource( 9 )
texture = ExtResource( 8 )

[node name="SleepParticles" type="Particles2D" parent="."]
z_index = 6
z_as_relative = false
emitting = false
amount = 6
lifetime = 2.0
speed_scale = 0.7
explosiveness = 0.1
process_material = SubResource( 12 )
texture = ExtResource( 9 )

[node name="BreakParticles" type="Particles2D" parent="."]
z_as_relative = false
emitting = false
amount = 512
lifetime = 3.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -200, -192, 400, 256 )
process_material = SubResource( 13 )
texture = ExtResource( 11 )
[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]
[connection signal="timeout" from="DryTimer" to="." method="_on_DryTimer_timeout"]
